# AgentAI

./: .gitignore  duckduckgo.ipynb  duckduckgo.py  pyproject.toml
HarishNeel/1_intro/: react_agent_basic.py
HarishNeel/2_basic_reflection/: basics.py  chains.py  pydantic_outputs.js  types.ipynb
HarishNeel/3_reflexion_agent_sys/: chains.py  execute_tools.py  reflexion_graph.py  schema.py
HarishNeel/4_state_deepdive/: basic_state.py  complex_state.py
HarishNeel/5_react_agent/: nodes.py  react_graph.py  react_state.py  reason_runnable.py
HarishNeel/6_chatbot/: 1_basic_chatbot.py  2_chatbot_with_tools.py  3_chat_with_in_memory_checkptr.py  4_chat_with_sqlite_checkpointer.py  checkpoint.sqlit
HarishNeel/7_human_in_the_loop/: 1_using_input().py  2_command.ipynb  3_resume.ipynb
MCP/: client.py
Rag From Scratch/: decomposition.py  query transformation.ipynb  query transformation.py  rag fushion.py  rag-from-scratch.ipynb
WebScaperAI/: main.py
