[project]
name = "agentai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.0",
    "debugpy>=1.8.17",
    "foundry-local-sdk>=0.5.0",
    "langchain-community==0.3.30",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-cli[inmem]>=0.4.2",
    "notebook>=7.4.7",
    "olive-ai[auto-opt]>=0.9.3",
    "onnxruntime-genai>=0.9.2",
    "pymilvus>=2.6.2",
    "pyrefly>=0.35.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
